adjusted color and fixed spacing withing projects

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -4,7 +4,9 @@
 }
 .artContent {
   margin-top: 10%;
+  color: white;
 }
 .aboutContent{
   margin-top: 10%;
+  color: white;
 }
